--- a/newtab.html
+++ b/newtab.html
@@ -1,6 +1,6 @@
 <html lang="en">  
 <head>  
-  <title> Example of Add More Field using the Bootstrap and Jquery </title>  
+  <title> Task Manager extension </title>  
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.js"></script>  
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">  
 </head>  
