--- a/newtab.html
+++ b/newtab.html
@@ -4,54 +4,68 @@
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.js"></script>  
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">  
 </head>  
-<body>  
-  
-<div class="container">  
-  <div class="panel panel-default">  
-    <div class="panel-heading"> Add tasks and deadlines </div>  
-    <div class="panel-body">  
-  
-        <form action="action.php" >  
-  
-        <div class="input-group control-group after-add-more">  
-          <input type="text" name="addmore[]" class="form-control" placeholder="Enter Task Here">  
-          <div class="input-group-btn">   
-            <button class="btn btn-success add-more" type="button"><i class="glyphicon glyphicon-plus"></i> Add</button>  
-          </div>  
-        </div>  
-  
-        </form>  
-  
-        <!-- Copy Fields -->  
-        <div class="copy hide">  
-          <div class="control-group input-group" style="margin-top:10px">  
-            <input type="text" name="addmore[]" class="form-control" placeholder="Enter Task Here">  
-            <div class="input-group-btn">   
-              <button class="btn btn-danger remove" type="button"><i class="glyphicon glyphicon-remove"></i> Remove</button>  
-            </div>  
-          </div>  
-        </div>  
-  
-    </div>  
-  </div>  
-</div>  
-  
-<script type="text/javascript">  
-  
-    $(document).ready(function() {  
-  
-      $(".add-more").click(function(){   
-          var html = $(".copy").html();  
-          $(".after-add-more").after(html);  
-      });  
-  
-      $("body").on("click",".remove",function(){   
-          $(this).parents(".control-group").remove();  
-      });  
-  
-    });  
-  
-</script>  
-  
+<body>
+
+    <div class="container">
+        <div class="panel panel-default">
+            <div class="panel-heading"> Add tasks and deadlines </div>
+            <div class="panel-body">
+
+                <form action="action.php">
+
+                    <div class="input-group control-group after-add-more">
+                        <input type="text" id="taskText" name="addmore[]" class="form-control" placeholder="Enter Task Here">
+                        <div class="input-group-btn">
+                            <button class="btn btn-success add-more" type="button" id="btnSendQuery"><i class="glyphicon glyphicon-plus"></i> Add</button>
+                        </div>
+                    </div>
+
+                </form>
+
+                <!-- Copy Fields -->
+                <div class="copy hide">
+                    <div class="control-group input-group" style="margin-top:10px">
+                        <input type="text" id="taskText2" name="addmore[]" class="form-control" placeholder="Enter Task Here">
+                        <div class="input-group-btn">
+                            <button class="btn btn-danger remove" type="button" id="btnRemoveQuery"><i class="glyphicon glyphicon-remove"></i> Remove</button>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="control-group input-group" style="margin-top:10px">
+            <button class="btn" type="button" id="btnSeePopup"><i class="glyphicon glyphicon-remove"></i> Check Popup</button>
+        </div>                        
+    </div>
+
+    <script type="text/javascript">
+
+        var count = 0;
+        var url = "newpopup.html";
+
+        $(document).ready(function () {
+
+            $(".add-more").click(function () {
+                var html = $(".copy").html();
+                $(".after-add-more").after(html);
+                count = count + 1;
+                url = url + "?" + count + "=" + encodeURIComponent($("#taskText").val());
+            });
+
+            $("body").on("click", ".remove", function () {
+                $(this).parents(".control-group").remove();
+                count = count - 1;
+            });
+            $("#btnSeePopup").bind("click", function () {
+                window.location.href = url;
+            });
+        });
+
+    </script>
+
 </body>  
 </html>  
