--- a/newtab.html
+++ b/newtab.html
@@ -8,14 +8,14 @@
 
     <div class="container">
         <div class="panel panel-default">
-            <div class="panel-heading"> Add tasks and deadlines </div>
+            <div class="panel-heading"> Add tasks and Deadlines </div>
             <div class="panel-body">
 
                 <form action="action.php">
 
                     <div class="input-group control-group after-add-more">
                         <input type="text" id="taskText" name="addmore[]" class="form-control" placeholder="Enter Task Here">
-                        <input type="date" id="deadline" name="deadline" max='09-09-2021'>
+                        <input type="date" id="deadline" name="deadline" min='2021-09-09'>
                         <div class="input-group-btn">
                             <button class="btn btn-success add-more" type="button" id="btnSendQuery"><i class="glyphicon glyphicon-plus"></i> Add</button>
                         </div>
@@ -27,7 +27,7 @@
                 <div class="copy hide">
                     <div class="control-group input-group" style="margin-top:10px">
                         <input type="text" name="addmore[]" class="form-control" placeholder="Enter Task Here">
-                        <input type="date" name="deadline">
+                        <input type="date" name="deadline" min='2021-09-09'>
                         <div class="input-group-btn">
                             <button class="btn btn-danger remove" type="button" id="btnRemoveQuery"><i class="glyphicon glyphicon-remove"></i> Remove</button>
                         </div>
@@ -57,7 +57,7 @@
                 var html = $(".copy").html();
                 $(".after-add-more").after(html);
                 count = count + 1;
-                url = url + "?" + count + "=" + encodeURIComponent($("#taskText2").val());
+                url = url + "?" + count + "=" + encodeURIComponent($("[name='addmore[]']").val());
             });
 
             $("body").on("click", ".remove", function () {
@@ -68,7 +68,7 @@
                 window.location.href = url;
             });
 
-            $("#deadline").click(function () {
+            $("[name='deadline']").click(function () {
                 var today = new Date();
                 var dd = today.getDate();
                 var mm = today.getMonth() + 1; //January is 0!
@@ -82,7 +82,7 @@
                     mm = '0' + mm;
                 }
 
-                today = dd + '-' + mm + '-' + yyyy;
+                today = yyyy + '-' + mm + '-' + dd;
                 document.getElementById("deadline").setAttribute("min", today);
             });
         });
