--- a/newtab.html
+++ b/newtab.html
@@ -13,18 +13,21 @@
             <div class="panel-body">
 
 
-                    <div class="inputfield">
-                        <input type="text" id="taskText" name="addTask" class="form-control" placeholder="Enter Task Here">
-                        <input type="date" id="dateText" name="deadline" min='2021-09-09'>
-                        <input type="time" id="timeText" name="deadlineTime">
-                        <button class="btn btn-success" type="button" id="btnSendQuery"><i class="glyphicon glyphicon-plus"></i> Add</button>
-                    </div>
+                <div class="inputfield">
+                    <input type="text" id="taskText" name="addTask" class="form-control" placeholder="Enter Task Here">
+                    <input type="date" id="dateText" name="deadline" min='2021-09-09'>
+                    <input type="time" id="timeText" name="deadlineTime">
+                    <button class="btn btn-success" type="button" id="btnSendQuery"><i class="glyphicon glyphicon-plus"></i> Add</button>
+                    <input type="text" id="testLabel" value="hi">
+                </div>
                 <ul class="todoList">
                     <!-- data are comes from local storage -->
                 </ul>                          
             
         </div>
+
     </div>  
+
 
     <script src="thescript.js" type="text/javascript"></script>
 
