--- a/testtab.html
+++ b/testtab.html
@@ -4,16 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <title>Todo List</title>
+  <title>Task manager extension</title>
 </head>
 <body>
 
   <div class="container">
-    <h1>Todo</h1>
+    <h1>Task List</h1>
 
     <form class="todo-form">
         <div class="todo-row">
-                <input type="text" class="todo-input" placeholder="Add a Todo...">
+                <input type="text" class="todo-input" placeholder="Add a task...">
         </div>
         <div class="todo-row">
                 <input type="date" class="todo-date" id="dateText" name="deadline" min='2021-09-09'>
